--- a/frontend/src/components/Foot/Foot.scss
+++ b/frontend/src/components/Foot/Foot.scss
@@ -1,11 +1,13 @@
 .footer {
+  position: fixed; /* Add this line */
+  bottom: 0; /* Add this line */
+  left: 0;
+  right: 0;
   background-color: #343a40;
   color: #ffffff;
   padding: 20px 0;
   width: 100%;
-  bottom: 0;
-  
-  
+  text-align: center;
 
   p {
     margin: 0;
